--- a/index.html
+++ b/index.html
@@ -11,12 +11,30 @@
 </head>
 
 <body>
-    <audio src="./Goat-Baby-Bah-A-www.fesliyanstudios.com.mp3" controls></audio><br>
+    <!-- <audio src="./Goat-Baby-Bah-A-www.fesliyanstudios.com.mp3" controls></audio><br>
     <video src="./SampleVideo_1280x720_1mb.mp4" controls></video>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/VDrO044VHpY" title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen></iframe>
+        allowfullscreen></iframe> -->
+    <header>
+        <h1>header section</h1>
+    </header>
+    <main>
+        <section>
+            <article>
+
+            </article>
+        </section>
+        <section>
+            <div>
+
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>footer section</p>
+    </footer>
 
 </body>
 
