html form input,label,fieldset,legend,textarea,submit

--- a/index.html
+++ b/index.html
@@ -28,6 +28,28 @@
         </section>
         <section>
             <div>
+                <form>
+                    <label for="name">
+                        User name:
+                        <input type="text" name="name" id="name">
+                    </label><br>
+                    <label for="email">
+                        Email:
+                        <input type="email" name="email" id="name">
+                    </label><br>
+                    <label for="password">
+                        password:
+                        <input type="password" name="password" id="password">
+                    </label>
+                    <fieldset>
+                        <legend>pitha</legend>
+
+                    </fieldset>
+                    <fieldset>
+                        <legend>bortha</legend>
+                    </fieldset>
+                    <input type="reset" value="Clear">
+                </form>
 
             </div>
         </section>
