table,tr,th,td,caption,colspan,attribute,rowsapn

--- a/index.html
+++ b/index.html
@@ -53,6 +53,35 @@
 
             </div>
         </section>
+        <section>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Address</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>arafat</td>
+                        <td>comilla</td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>salman</td>
+                        <td>dhaka</td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>atik</td>
+                        <td>feni</td>
+                    </tr>
+                </tbody>
+                <tfoot></tfoot>
+            </table>
+        </section>
     </main>
     <footer>
         <p>footer section</p>
