--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen></iframe> -->
     <header>
-        <h1>header section</h1>
+        <!-- <h1>header section</h1> -->
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <section>
